--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
             <version>1.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version>
+        </dependency>
+
 
     </dependencies>
 
